--- a/index.html
+++ b/index.html
@@ -1,106 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+</head>
+
+<body>
   <header>
-    <h3>Nour Elhouda Jawedi</h3>
-    <img
-      src="./res/img/picture.jpeg"
-      height="120"
-      width="90"
-      alt="Profile picture"
-    />
-    <section>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#work">Work</a>
-      <a href="#resume">Resume</a>
-      <a href="#contact">Contact</a>
-    </section>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            <a class="nav-link active" aria-current="page" href="#about">About</a>
+            <a class="nav-link active" aria-current="page" href="#work">Work</a>
+            <a class="nav-link active" aria-current="page" href="#resume">Resume</a>
+            <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </header>
-  <hr />
   <main>
     <form>
       <section id="home">
-        <h2>Home</h2>
-        <img
-          src="./res/img/home.jpeg"
-          height="400"
-          width="1500"
-          alt="Home picture"
-        />
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./res/img/BannerPic2.png" class="d-block w-100" alt="First Slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color:black">First slide label</h5>
+                <p style="color: black">Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./res/img/BannerPic3.png" class="d-block w-100" alt="Second Slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color:black">Second slide label</h5>
+                <p style="color:black">Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./res/img/BannerPic1.jpeg" class="d-block w-100" alt="Third Slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color:black">Third slide label</h5>
+                <p style="color:black">Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </section>
       <section id="about">
-        <h2>About</h2>
-        <p>This is my online CV consists mainly of three sections:</p>
-        <ul type="square">
-          <li>Work done using MERN stack.</li>
-          <li>Education and university.</li>
-          <li>My contact.</li>
-        </ul>
+        <h2><span>About</span></h2>
+        <div class="container py-5 h-100">
+              <div class="card">
+                <div class="card-body p-4">
+                  <div class="d-flex text-black">
+                    <div class="flex-shrink-0">
+                      <img src="./res/img/picture.jpeg"
+                        alt="Generic placeholder image" class="img-fluid"
+                        style="width: 180px; border-radius: 10px;">
+                    </div>
+                    <div class="flex-grow-1 ms-3">
+                      <h5 class="mb-1">Nour Elhouda Jawedi</h5>
+                      <p class="mb-2 pb-1" style="color: #2b2a2a;">Full Stack Developer</p>
+                      <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
+                        style="background-color: #efefef;">
+                        <p>This is my online CV consists mainly of three sections:</p>
+                        <ul type="square">
+                          <li>Work done using MERN stack.</li>
+                          <li>Education and university.</li>
+                          <li>My contact.</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
       </section>
 
       <section id="work">
         <h2>Work</h2>
-        <div>
-          <dl>
-            <dt>
-              <h4>Post</h4>
-            </dt>
-            <dd>Full Stack developer</dd>
-            <dt>
-              <h4>Company/Startup</h4>
-            </dt>
-            <dd>Branper</dd>
-            <dt>
-              <h4>Technologies</h4>
-            </dt>
-            <dd>MERN Stack, Git, JQuery</dd>
-            <dt>
-              <h4>Description</h4>
-            </dt>
-            <dd>
-              Design and development of a web application that provides users
-              with a Data <br />
-              tool used through a browser extension, to choose multipe elements
-              to scrape <br />
-              from different websites and save it to their personal
-              dashboard.<br />
-              The following video explains what is Data Scraping.
-            </dd>
-          </dl>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Ct8Gxo8StBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="container py-5 h-100">
+          <div class="card">
+            <div class="card-body p-4">
+              <div class="d-flex text-black">
+                <div class="flex-grow-1 ms-3">
+                 <span>
+                  <dl>
+                    <dt>
+                      <h4>Post</h4>
+                    </dt>
+                    <dd>Full Stack developer</dd>
+                    <dt>
+                      <h4>Company/Startup</h4>
+                    </dt>
+                    <dd>Branper</dd>
+                    <dt>
+                      <h4>Technologies</h4>
+                    </dt>
+                    <dd>MERN Stack, Git, JQuery</dd>
+                    <dt>
+                      <h4>Description</h4>
+                    </dt>
+                    <dd>
+                      Design and development of a web application that provides users
+                      with a Data <br />
+                      tool used through a browser extension, to choose multipe elements
+                      to scrape <br />
+                      from different websites and save it to their personal
+                      dashboard.<br />
+                      The following video explains what is Data Scraping.
+                    </dd>
+                  </dl>
+                 </span>
+                 <span>
+                  <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Ct8Gxo8StBU" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                 </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="resume">
         <h2>Resume</h2>
-        <div>
-          <h3>Education</h3>
-          <dl>
-            <dt>
-              <h4>Master's Degree in Software Engineering In ISIMM</h4>
-            </dt>
-            <dd>2020 --> 2022</dd>
-            <dt>
-              <h4>License in Computer Science</h4>
-            </dt>
-            <dd>2017 --> 2020</dd>
-          </dl>
+        <div class="container py-5 h-100">
+          <div class="card">
+            <div class="card-body p-4">
+              <div class="d-flex text-black">
+                <div class="flex-grow-1 ms-3">
+                  <h3>Education</h3>
+                  <dl >
+                    <dt>
+                      <h4>Master's Degree in Software Engineering In ISIMM</h4>
+                    </dt>
+                    <dd>2020 --> 2022</dd>
+                    <dt>
+                      <h4>License in Computer Science</h4>
+                    </dt>
+                    <dd>2017 --> 2020</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="contact">
         <h2>Contact</h2>
-        <div>
-          <dl>
-            <dt>
-              <h4>Email:</h4>
-            </dt>
-            <dd>nourelhoudajawedi@gmail.com</dd>
-            <dt>
-              <h4>Phone Number:</h4>
-            </dt>
-            <dd>+216 50 654 426</dd>
-          </dl>
+        <div class="container py-5 h-100">
+          <div class="card">
+            <div class="card-body p-4">
+              <div class="d-flex text-black">
+                <div class="flex-grow-1 ms-3">
+                  <dl>
+                    <dt>
+                      <h4>Email:</h4>
+                    </dt>
+                    <dd>nourelhoudajawedi@gmail.com</dd>
+                    <dt>
+                      <h4>Phone Number:</h4>
+                    </dt>
+                    <dd>+216 50 654 426</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </form>
@@ -112,4 +209,6 @@
       training
     </p>
   </footer>
+</body>
+
 </html>
